--- a/SwtorOptimizer/ClientApp/src/app/components/pages/find-combination-tasks/find-combination-tasks.component.scss
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/find-combination-tasks/find-combination-tasks.component.scss
@@ -22,13 +22,7 @@
   max-width: 10%;
 }
 
-.button-paginator-footer {
-  display: flex;
-  align-items: stretch;
-  padding: 0 !important;
-  z-index: 10;
-}
-
-.button-paginator {
-  width: 100%;
+.table-container {
+  max-height: 1000px;
+  overflow: auto;
 }
