--- a/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
@@ -45,4 +45,23 @@
       <button mat-raised-button [disabled]="isValidateButtonDisabled()" type="submit">Calculer</button>
     </div>
   </form>
+
+  <div class="mini-doc">
+    <h3>A propos</h3>
+    <p>SWTOR Optimizer est une application permetant de calculer, en fonction d'un cap de statistique tertiaire (alacrité, précision) à atteindre,
+    le meilleur set de sophistications disponnible, cela afin de maximiser la puissance tout en supprimant le surplus de statistique tertaire.</p>
+    <p>L'application calcule uniquement des sets de sophistications pour les DPS, en se basant sur sophistications <b>Initiative</b> (pour la précision) ou <b>Aisance</b> (pour l'alacrité).</p>
+
+    <h3>Comment on s'en sert ?</h3>
+    <p>Pour calculer un cap, vous êtes sur la bonne page ! Entrez les détails  du cap que vous souhaitez atteindre, appuyez sur le bouton <b>Calculer</b> et patientez.</p>
+    <p>Pour voir tout les résultats des calculs déjà effectués, rendez-vous dans le menu latéral, et cliquez sur <b>Résultats</b>.</p>
+    <p>Pour voir les tâches de calcul en cours ou terminées, rendez-vous dans le menu latéral et cliquez sur <b>Liste des calculs</b>.</p>
+    <h3>Comment ça marche ?</h3>
+    <p>Si vous êtes un développeur (ou curieux), rendez-vous sur GitHub et jetez un oeil au code !</p>
+    <p>Sinon, voici un petit résumé :</p>
+    <p>Lorsqu'un utilisateur lance un calcul, l'application vérifie si elle n'a pas déjà calculé les possibilités de set pour le cap demandé. Si c'est le cas, elle redirige le demandeur sur la page des résultats.</p>
+    <p>Si ce n'est pas le cas, elle lance une tâche de calcul qui va être effectuée en arrière plan. Selon le nombre de possibilité
+    (7 sophistications au maximum sur le set, 20 possibilités par emplacement, le nombre de possibilités à tester peut aller jusqu'à 20^7 (1 280 000 000) combinaisons), le calcul peut prendre un moment !</p>
+    <p>Une fois la tâche de calcul terminée, les résultats sont disponnibles pour tout les utilisateurs.</p>
+  </div>
 </div>
