--- a/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.scss
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.scss
@@ -13,6 +13,11 @@
   width: 100%;
 }
 
+.mini-doc {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
 .centered-text {
     text-align: center;
 }
