--- a/SwtorOptimizer/ClientApp/src/app/components/widgets/topbar/topbar.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/widgets/topbar/topbar.component.html
@@ -16,5 +16,5 @@
     <h1 class="app-title">SWTOR Optimizer</h1>
   </a>
 
-<span></span>
+  <app-theme-toggle (OnToggleTheme)="onToggleTheme($event)"></app-theme-toggle>
 </mat-toolbar>
