--- a/SwtorOptimizer/ClientApp/src/app/app.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-nav-menu (ToggleTheme)="OnToggleTheme($event)">
+<app-nav-menu (OnToggleTheme)="onToggleTheme($event)">
   <router-outlet></router-outlet>
 </app-nav-menu>
