--- a/SwtorOptimizer/ClientApp/src/app/components/widgets/theme-toggle/theme-toggle.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/widgets/theme-toggle/theme-toggle.component.html
@@ -1,6 +1,6 @@
 <div class="select">
   <label class="slider">
-    <input type="checkbox" (change)="OnToggleTheme($event)" id="check" />
+    <input type="checkbox" (change)="onToggleTheme($event)" id="check" />
     <span class="circle"></span>
   </label>
 </div>
