Update mini doc

--- a/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
@@ -48,7 +48,9 @@
 
   <div class="mini-doc">
     <h3>A propos</h3>
-    <p>SWTOR Optimizer est une application permetant de calculer, en fonction d'un cap de statistique tertiaire (alacrité, précision) à atteindre,
+    <p>Je suis Lowxorx, un joueur de SWTOR depuis les premiers jours de sa sortie. J'ai commencé sur le serveur RP Battle Meditation, et aujourd'hui je suis sur le serveur français The Leviathan. J'ai toujours apprécié
+    optimiser mes personnages, et pour cela j'ai décidé d'allier mon métier à l'un de mes jeux favoris pour me faciliter la tâche dans mes recherches de l'équipement optimal.</p>
+    <p>SWTOR Optimizer est une application permettant de calculer, en fonction d'un cap de statistique tertiaire (alacrité, précision) à atteindre,
     le meilleur set de sophistications disponnible, cela afin de maximiser la puissance tout en supprimant le surplus de statistique tertaire.</p>
     <p>L'application calcule uniquement des sets de sophistications pour les DPS, en se basant sur sophistications <b>Initiative</b> (pour la précision) ou <b>Aisance</b> (pour l'alacrité).</p>
 
