Add Github links

--- a/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
@@ -48,10 +48,14 @@
 
   <div class="mini-doc">
     <h3>A propos</h3>
-    <p>Je suis Lowxorx, un joueur de SWTOR depuis les premiers jours de sa sortie. J'ai commencé sur le serveur RP Battle Meditation, et aujourd'hui je suis sur le serveur français The Leviathan. J'ai toujours apprécié
-    optimiser mes personnages, et pour cela j'ai décidé d'allier mon métier à l'un de mes jeux favoris pour me faciliter la tâche dans mes recherches de l'équipement optimal.</p>
-    <p>SWTOR Optimizer est une application permettant de calculer, en fonction d'un cap de statistique tertiaire (alacrité, précision) à atteindre,
-    le meilleur set de sophistications disponnible, cela afin de maximiser la puissance tout en supprimant le surplus de statistique tertaire.</p>
+    <p>
+      Je suis Lowxorx, un joueur de SWTOR depuis les premiers jours de sa sortie. J'ai commencé sur le serveur RP Battle Meditation, et aujourd'hui je suis sur le serveur français The Leviathan. J'ai toujours apprécié
+      optimiser mes personnages, et pour cela j'ai décidé d'allier mon métier à l'un de mes jeux favoris pour me faciliter la tâche dans mes recherches de l'équipement optimal.
+    </p>
+    <p>
+      SWTOR Optimizer est une application permettant de calculer, en fonction d'un cap de statistique tertiaire (alacrité, précision) à atteindre,
+      le meilleur set de sophistications disponnible, cela afin de maximiser la puissance tout en supprimant le surplus de statistique tertaire.
+    </p>
     <p>L'application calcule uniquement des sets de sophistications pour les DPS, en se basant sur sophistications <b>Initiative</b> (pour la précision) ou <b>Aisance</b> (pour l'alacrité).</p>
 
     <h3>Comment on s'en sert ?</h3>
@@ -59,11 +63,13 @@
     <p>Pour voir tout les résultats des calculs déjà effectués, rendez-vous dans le menu latéral, et cliquez sur <b>Résultats</b>.</p>
     <p>Pour voir les tâches de calcul en cours ou terminées, rendez-vous dans le menu latéral et cliquez sur <b>Liste des calculs</b>.</p>
     <h3>Comment ça marche ?</h3>
-    <p>Si vous êtes un développeur (ou curieux), rendez-vous sur GitHub et jetez un oeil au code !</p>
+    <p>Si vous êtes un développeur (ou curieux), rendez-vous sur <a href="https://github.com/Lowxorx/SwtorOptimizer" target="_blank">GitHub</a> et jetez un oeil au code !</p>
     <p>Sinon, voici un petit résumé :</p>
     <p>Lorsqu'un utilisateur lance un calcul, l'application vérifie si elle n'a pas déjà calculé les possibilités de set pour le cap demandé. Si c'est le cas, elle redirige le demandeur sur la page des résultats.</p>
-    <p>Si ce n'est pas le cas, elle lance une tâche de calcul qui va être effectuée en arrière plan. Selon le nombre de possibilité
-    (7 sophistications au maximum sur le set, 20 possibilités par emplacement, le nombre de possibilités à tester peut aller jusqu'à 20^7 (1 280 000 000) combinaisons), le calcul peut prendre un moment !</p>
+    <p>
+      Si ce n'est pas le cas, elle lance une tâche de calcul qui va être effectuée en arrière plan. Selon le nombre de possibilité
+      (7 sophistications au maximum sur le set, 20 possibilités par emplacement, le nombre de possibilités à tester peut aller jusqu'à 20^7 (1 280 000 000) combinaisons), le calcul peut prendre un moment !
+    </p>
     <p>Une fois la tâche de calcul terminée, les résultats sont disponnibles pour tout les utilisateurs.</p>
   </div>
 </div>
