--- a/SwtorOptimizer/ClientApp/src/app/components/widgets/nav-menu/nav-menu.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/widgets/nav-menu/nav-menu.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav #drawer class="sidemenu-container" mode="push" (closedStart)="onClose()" [opened]="isSideMenuOpen">
     <div class="side-menu">
       <header>
-        <img src="../../../../assets/images/header.jpg" class="header-image"/>
+        <img src="../../../../assets/images/header.jpg" class="header-image" />
       </header>
       <section class="menu-lists">
         <mat-nav-list color="primary" (click)="toggleMenu()">
@@ -23,7 +23,7 @@
         <mat-nav-list color="primary" (click)="toggleMenu()" class="bottom-list">
           <mat-list-item>
             <mat-icon mat-list-icon svgIcon="github"></mat-icon>
-            <a mat-line href="https://github.com/" target="_blank"> Code source</a>
+            <a mat-line href="https://github.com/Lowxorx/SwtorOptimizer" target="_blank"> Code source</a>
           </mat-list-item>
           <mat-list-item>
             <mat-icon mat-list-icon>info</mat-icon>
