Add ResultObject model for http response handling

--- a/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
@@ -53,7 +53,7 @@
       optimiser mes personnages, et pour cela j'ai décidé d'allier mon métier à l'un de mes jeux favoris pour me faciliter la tâche dans mes recherches de l'équipement optimal.
     </p>
     <p>
-      SWTOR Optimizer est une application permettant de calculer, en fonction d'un cap de statistique tertiaire (alacrité, précision) à atteindre,
+      SWTOR Optimizer est une application permettant de calculer, en fonction d'un cap de statistique tertiaire à atteindre (alacrité, précision),
       le meilleur set de sophistications disponnible, cela afin de maximiser la puissance tout en supprimant le surplus de statistique tertaire.
     </p>
     <p>L'application calcule uniquement des sets de sophistications pour les DPS, en se basant sur sophistications <b>Initiative</b> (pour la précision) ou <b>Aisance</b> (pour l'alacrité).</p>
