update nav links

--- a/SwtorOptimizer/ClientApp/src/app/components/widgets/nav-menu/nav-menu.component.scss
+++ b/SwtorOptimizer/ClientApp/src/app/components/widgets/nav-menu/nav-menu.component.scss
@@ -33,3 +33,12 @@
 .header-image {
     width: 300px;
 }
+
+.nav-link-item {
+    vertical-align: central;
+}
+
+.mat-icon {
+    width: 40px;
+    height:  22px;
+}
