--- a/SwtorOptimizer/ClientApp/src/app/components/widgets/nav-menu/nav-menu.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/widgets/nav-menu/nav-menu.component.html
@@ -6,18 +6,9 @@
       </header>
       <section class="menu-lists">
         <mat-nav-list color="primary" (click)="toggleMenu()">
-          <mat-list-item>
-            <mat-icon mat-list-icon>calculate</mat-icon>
-            <a mat-line [routerLink]="['/']"> Calculer un cap</a>
-          </mat-list-item>
-          <mat-list-item>
-            <mat-icon mat-list-icon>list_alt</mat-icon>
-            <a mat-line [routerLink]="['/sets']"> Résultats</a>
-          </mat-list-item>
-          <mat-list-item>
-            <mat-icon mat-list-icon>memory</mat-icon>
-            <a mat-line [routerLink]="['/tasks']"> Liste des calculs</a>
-          </mat-list-item>
+          <a mat-list-item [routerLink]="['/']" class="nav-link-item"> <mat-icon>calculate</mat-icon> Calculer un cap</a>
+          <a mat-list-item [routerLink]="['/sets']" class="nav-link-item"> <mat-icon>list_alt</mat-icon> Résultats</a>
+          <a mat-list-item [routerLink]="['/tasks']" class="nav-link-item"> <mat-icon>memory</mat-icon> Liste des calculs</a>
         </mat-nav-list>
 
         <mat-nav-list color="primary" (click)="toggleMenu()" class="bottom-list">
