Fix typo and style

--- a/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container" novalidate>
-  <div>
+  <div class="form">
     <h1 class="mat-title">Calculer un set de sophistications</h1>
   </div>
 
@@ -70,6 +70,6 @@
       Si ce n'est pas le cas, elle lance une tâche de calcul qui va être effectuée en arrière plan. Selon le nombre de possibilité
       (7 sophistications au maximum sur le set, 20 possibilités par emplacement, le nombre de possibilités à tester peut aller jusqu'à 20^7 (1 280 000 000) combinaisons), le calcul peut prendre un moment !
     </p>
-    <p>Une fois la tâche de calcul terminée, les résultats sont disponnibles pour tout les utilisateurs.</p>
+    <p>Une fois la tâche de calcul terminée, les résultats sont disponibles pour tout les utilisateurs.</p>
   </div>
 </div>
