fix task details

--- a/SwtorOptimizer/ClientApp/src/app/components/pages/find-combination-task-details/find-combination-task-details.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/find-combination-task-details/find-combination-task-details.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="task && isLoaded" class="container mat-typography">
+<div *ngIf="task != null && isLoaded" class="container mat-typography">
   <div *ngIf="isDetailsVisible" class="centered">
     <h1 class="mat-title">Détails de la tâche de calcul du cap {{ task.threshold }}</h1>
-    <h4>Statut de la tâche : {{ status$ | async}}</h4>
+    <h4>Statut de la tâche : {{ task.status }}</h4>
     <h4 *ngIf="task.isStarted">Date de démarrage du calcul : {{ task.startDate | date:'dd/MM/yyyy' }}</h4>
     <h4 *ngIf="task.isEnded">Date de fin du calcul : {{ task.endDate | date:'dd/MM/yyyy' }}</h4>
-    <h4 *ngIf="task.isStarted">Durée d'exécution : {{ duration$ | async }}</h4>
+    <h4 *ngIf="task.isStarted">Durée d'exécution : {{ task.duration }}</h4>
     <h4 *ngIf="task.isEnded">Nombre de combinaisons trouvées : {{ task.foundSets }}</h4>
   </div>
   <button *ngIf="task && task.isEnded && task.foundSets > 0" mat-raised-button color="primary" (click)="toggleDetails()">{{ isDetailsVisible ? 'Masquer les détails' : 'Afficher les détails' }}</button>
