--- a/SwtorOptimizer/ClientApp/src/app/components/dialogs/set-details-dialog/set-details-dialog.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/dialogs/set-details-dialog/set-details-dialog.component.html
@@ -6,7 +6,7 @@
     </mat-button-toggle-group>
     <mat-list>
       <mat-list-item>
-        <h4 mat-line>Endurance : {{ enhancementSet.endurance }} | {{ currentStat.displayName }} : {{ enhancementSet.power }} | Puissance : {{ enhancementSet.threshold }}</h4>
+        <h4 mat-line>Endurance : {{ enhancementSet.endurance }} | {{ currentStat.displayName }} : {{ enhancementSet.threshold }} | Puissance : {{ enhancementSet.power }}</h4>
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item>
